force-app/main/default/objects/Deals_Counter__c/Deals_Counter__c.object-meta.xml
<CustomObject>
    <description>Count the number of deals assigned to a team member.</description>
    <label>Deals Counter</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Counter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>