force-app/main/default/objects/Deals_Counter__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Deals Counters</relationshipLabel>
    <relationshipName>Deals_Counters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>